# RenderToy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOS.md  imgui.ini
CDP/: CMakeLists.txt
CDP/include/CDP/Singleton/: Singleton.h
CDP/include/CDP/Singleton/details/: Singleton.inl
CDP/include/CDP/Visitor/: General_Visitor.h  Visitor.h
RenderToy/: CMakeLists.txt  Main.cpp
RenderToy/include/: IComponent.h  IObject.h  IPass.h  IProperty.h
RenderToy/include/AssetMngr/: AssetMngr.h
RenderToy/include/Editor/: Editor.h
RenderToy/include/LogicalComponent/: LogicalComponent.h
RenderToy/include/ObjectMngr/: BasicObject.h  ObjectMngr.h
RenderToy/include/Pass/: PhongPass.h
RenderToy/include/Pass/logical/: MatUpdatePass.h  MeshUpdatePass.h  ShadowPrePass.h  SsaoPrePass.h  TransUpdatePass.h  UpdatePass.h
RenderToy/include/Pass/logical/shadow/: ShadowMap.h
RenderToy/include/Pass/logical/ssao/: Ssao.h
RenderToy/include/Pass/render/: PhongPass.h  ShadowPass.h  SsaoPass.h
RenderToy/include/PropertyMngr/: Material.h  Mesh.h  PropertyMngr.h  Transform.h
RenderToy/include/RenderComponent/: RenderComponent.h
RenderToy/include/RenderToy/: RenderToy.h
RenderToy/include/Utility/: GlobalParam.h  Macro.h  refl.hpp
RenderToy/src/core/: IObject.cpp  Main.cpp
RenderToy/src/core/AssetMngr/: AssetMngr.cpp
RenderToy/src/core/Editor/: Editor.cpp
RenderToy/src/core/LogicalComponent/: LogicalComponent.cpp
RenderToy/src/core/ObjectMngr/: BasicObject.cpp  ObjectMngr.cpp
RenderToy/src/core/Pass/: PhongPass.cpp
RenderToy/src/core/Pass/logical/: MatUpdatePass.cpp  MeshUpdatePass.cpp  ShadowPrePass.cpp  SsaoPrePass.cpp  TransUpdatePass.cpp  UpdatePass.cpp
RenderToy/src/core/Pass/logical/shadow/: ShadowMap.cpp
RenderToy/src/core/Pass/logical/ssao/: Ssao.cpp
RenderToy/src/core/Pass/render/: PhongPass.cpp  ShadowPass.cpp  SsaoPass.cpp
RenderToy/src/core/PropertyMngr/: Material.cpp  Mesh.cpp  PropertyMngr.cpp  Transform.cpp
RenderToy/src/core/RenderComponent/: RenderComponent.cpp
RenderToy/src/core/RenderToy/: RenderToy.cpp
RenderToy/src/core/Utility/: GlobalParam.cpp  Macro.cpp
assets/json/: DefaultScene.json  PreMatAndTex.json
assets/models/: Squirtle.txt  cow.txt  marry.txt
assets/models/txt/: Pikachu.txt
assets/texture/common/: BrokenGlass.dds
assets/texture/marry/: marry.dds
assets/texture/sky/: tilecube1024.dds
docs/: MaterialMngr.md  ObjectManager.md  ParamPass.md  RenderProcess.md  Show.md
docs/mindmap/: RenderToy.xmind  ShaderNeed.xmind
shaders/: color.hlsl
shaders/Phong/: Common.hlsl  DrawNormals.hlsl  LightUtil.hlsl  PhongShading.hlsl  Shadows.hlsl  Sky.hlsl  Ssao.hlsl  SsaoBlur.hlsl
